--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ defaults:
       type:      "issue"
     values:
       layout:    "issue"
-      permalink: /issue-:tag
+      permalink: /:name
   -
     scope:
       path:      ""
