--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  name: github
+  repo: rizalnramadhan/zinabidin
 
 publish_mode: editorial_workflow
 media_folder: "assets/img" # Media files will be stored in the repo under images/uploads
