--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: github
   repo: rizalnramadhan/zinabidin
+  branch: master
+  api_root: https://api.github.com
 
 publish_mode: editorial_workflow
 media_folder: "assets/img" # Media files will be stored in the repo under images/uploads
