--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,6 @@
 backend:
-  name: github
-  repo: rizalnramadhan/zinabidin
-  branch: master
-  api_root: https://api.github.com
+  name: git-gateway
+  branch: master # Branch to update (optional; defaults to master)
 
 publish_mode: editorial_workflow
 media_folder: "assets/img" # Media files will be stored in the repo under images/uploads
