--- a/admin/config.yml
+++ b/admin/config.yml
@@ -14,9 +14,11 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Judul", name: "title", widget: "string"}
+      - {label: "Nomor Issue", name: "category", widget: "string"}
       - {label: "Tanggal", name: "date", widget: "datetime"}
       - {label: "Gambar Sampul", name: "cover", widget: "image"}
       - {label: "Editorial", name: "body", widget: "markdown"}
+
   - name: "post" # Used in routes, e.g., /admin/collections/blog
     label: "Artikel" # Used in the UI
     folder: "_posts" # The path to the folder where the documents are stored
@@ -24,4 +26,4 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Judul", name: "title", widget: "string"}
-      - {label: "Penulis", name: "author", widget: "image"}
+      - {label: "Penulis", name: "author", widget: "string"}
